<resources>
    <string name="app_name">IETABAAPPS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvml">Acompañar a la comunidad Awá en el proceso de consolidación de un sistema educativo propio basado en su lengua, autonomía, principios, cuidado del ambiente y costumbres de tal manera que le permita el fortalecimiento de su cultura. Ubicar a sus miembros en el sector productivo, de liderazgo comunitario y en consecuencia alcanzar su realización singular  colectiva e histórica. La Institución Educativa Tecnica Agroambiental Bilingüe Awá, se construye como ámbito propicio para el desarrollo humano y comunitario y concibe su razón de ser en procesos que afirman la autonomía, la libertad, la democracia, y defensa de su territorio como patrimonio y legado de sus ancestros</string>
    <string name="tvvl">La Institución Educativa Tecnica Agroambiental Bilingüe Awá, Propenderá por ser el centro e imagen corporativa de  la comunidad Awá, reconocida a nivel Local, regional y Nacional como un espacio educativo - cultural de formación integral de sus miembros; motivándolos a continuar estudios superiores, que contribuyan al mejoramiento y calidad de vida de los indígenas de la comunidad. Se cuenta para ello con personal comprometido que garantiza el logro de este propósito.</string>
    <string name="tvm">MISION</string>
    <string name="tvv">VISION</string>
    <string name="t1">Profesores</string>
    <string name="tinfo">Informacion</string>
    <string name="t8">Ingeniera de sistemas</string>
    <string name="tvk1">Estudiante</string>
    <string name="t9">Docente:</string>
    <string name="t10">Especialidad:</string>
    <string name="t3">Celular:</string>
    <string name="tvs">Ingeniero de sistemas</string>
    <string name="t4">Licenciada en ciencias naturales</string>
    <string name="t12">Docente de Awapit</string>
    <string name="twifi">Wifi</string>
    <string name="tpro">Profesores</string>
    <string name="tacerca">Acerca de...</string>
    <string name="tfi">Institución Educativa Tecnologica Agroambiental Bilingue Awá</string>
    <string name="zonwifi">Zonas Wifi</string>
    <string name="ubi">Ubicacion</string>
    <string name="prof">Profesores</string>
    <string name="sali">Salir</string>
    <string name="grad">Programacion grados</string>
    <string name="ini">Inicio</string>
    <string name="infor">Informacion</string>
    <string name="pro">PROGRAMA</string>
    <string name="Pre">1. Presentacion de graduandos 2017</string>
    <string name="him">2. Himno Nacional</string>
    <string name="pa">3. Palabras del Rector Jose Miguel Bisbicus</string>
    <string name="procl">4. Proclamacion de bachilleres y entrega de diplomas</string>
    <string name="ent">5. Entrega de reconocimientos especiales</string>
    <string name="pal">6. Palabras de despedida a cargo de un estudiante de grado undecimo</string>
    <string name="ba">BACHILLERES 2017</string>
    <string name="ho">Hour: 2Pm</string>
</resources>
