<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgramacionGradosFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="578dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="182dp"
                android:orientation="vertical"
                android:weightSum="1">

                <android.support.v7.widget.CardView
                    android:layout_width="327dp"
                    android:layout_height="165dp"
                    android:layout_gravity="center"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    app:cardElevation="24dp"
                    android:layout_weight="0.85">

                    <LinearLayout
                        android:layout_width="367dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="29dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="243dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pro" />

                                <TextView
                                    android:id="@+id/textView19"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/ho" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="209dp"
                            android:orientation="vertical"
                            android:weightSum="1">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Pre" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/him" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pa" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/procl" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ent" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="326dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.67"
                                android:text="@string/pal" />

                            <TextView
                                android:id="@+id/textView38"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="460dp"
                        android:orientation="vertical"></LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="@dimen/default_corner_radius"
                    app:cardElevation="24dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="BACHILLERES 2017" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView30"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Bisbicus Narvaez Delcy Milena" />

                            <TextView
                                android:id="@+id/textView31"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView32"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView33"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView34"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView35"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView36"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView347"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView348"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView39"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView40"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView41"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView42"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView43"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView44"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />

                            <TextView
                                android:id="@+id/textView45"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arciniegas Bastidas Diana" />
                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|clip_vertical|clip_horizontal"
        android:text="OK" />
</FrameLayout>
