<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sistemas.karolproyectoandroid.UbicacionFragment">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="171dp"
                app:srcCompat="@drawable/fondo" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="53dp"
                        android:layout_height="41dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/wifi"
                            android:layout_width="37dp"
                            android:layout_height="29dp"
                            android:background="@android:drawable/ic_dialog_map"
                            android:drawableBottom="@drawable/boom_menu_button" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/twifi"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="63dp"
                        android:layout_height="47dp"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/profesores"
                            android:layout_width="32dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_profes" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/tpro"
                            android:textSize="10sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="57dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/acercade"
                            android:layout_width="34dp"
                            android:layout_height="28dp"
                            android:background="@android:drawable/ic_menu_info_details" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="108dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/tacerca"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="66dp"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/ubicacion"
                            android:layout_width="34dp"
                            android:layout_height="26dp"
                            android:background="@android:drawable/ic_menu_today" />

                        <TextView
                            android:id="@+id/textView102"
                            android:layout_width="108dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/tinfo"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="66dp"
                        android:layout_height="40dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/grados"
                            android:layout_width="34dp"
                            android:layout_height="26dp"
                            android:background="@android:drawable/ic_menu_agenda" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="108dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Grados 2017"
                            android:textSize="10sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:orientation="vertical">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="368dp"
                android:layout_height="320dp"
                tools:context="com.example.sistemas.karolproyectoandroid.MapsActivity"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
